Fixed navbar gap

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,14 @@
+body {
+    width: 100%;
+    margin: 0;
+}
+nav {
+    background: linear-gradient(to left, cyan, magenta);
+    padding: 20px;
+    margin: 0;
 
+
+}
 #content {
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -11,6 +21,7 @@
     border: 1px solid red;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 100;
+    
 }
 
 .new-project-form {
